# two-phase-commit

./: .gitignore  Cargo.toml  README.md  two-phase-commit-references.md
.specs/2pc-alloy/: plan.md  questions.md  spec.md
.specs/2pc-crash-recovery/: plan.md  spec.md
.specs/2pc-no-failures/: plan.md  problems.md  questions.md  spec.md
.specs/2pc-rust/: plan.md  reviews.md  spec.md
alloy/: REVIEW.md  TwoPhaseCommit.als  scratch.als
examples/: timeline.rs  visualize.html  visualize.rs
examples/scenarios/: mod.rs
src/: coordinator.rs  lib.rs  participant.rs  properties.rs  simulator.rs  state_machine.rs  types.rs
src/coordinator/: mod.rs  tests.rs
src/participant/: mod.rs  tests.rs
src/simulator/: event.rs  mod.rs  properties.rs
tests/: simulation.proptest-regressions  simulation.rs
tla/: TwoPhaseCommit.cfg  TwoPhaseCommit.tla
