[package]
name = "two-phase-commit"
version = "0.1.0"
edition = "2024"
description = "Two-phase commit protocol: TLA+, Alloy 6, and Rust simulation with crash recovery"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
tracing = "0.1"

[dev-dependencies]
proptest = { version = "1", features = ["attr-macro"] }
